# thinking-bee

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: main.ipynb
src/: 01_volatility_baseline.ipynb  02_directional_alpha.ipynb  lagging.py  main.ipynb  poly_utils.py  targets.py
src/utils/: data_cleaning.py  poly.py  wiki.py
src/utils/text/: __init__.py  cleaning.py  nmf.py  tokenizer.py
