[project]
name = "thinking-bee"
version = "0.1.0"
description = "Thinking about bees"
authors = [ { name = "Your Name" } ]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "requests"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
